added login page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,3 +7,19 @@
 .full-background {
   background-color: color($colors, full-background);
 }
+
+ion-card{
+  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12) !important;
+}
+
+ion-spinner {
+  * {
+    stroke: #FD367E;
+  }
+
+  &.spinner-circles circle,
+  &.spinner-bubbles circle,
+  &.spinner-dots circle {
+    fill: #FD367E;
+  }
+}
