Improved: further improved login process

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content" id="main-menu">
+<ion-menu [content]="content" id="main_menu">
   <ion-header>
     <ion-toolbar>
       <div style="background-color: #488aff !important">
