Improved: Added list product API

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,6 +40,7 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   full-background : #F1F2F3,
+  accent: #ffeb3b
 );
 
 $toolbar-md-background : color($colors, primary);
