--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,14 +6,14 @@
           <img src="./assets/imgs/avatar.png" style="width: 50px;height: 50px;margin-left: 5px">
         </ion-avatar>
       </div>
-      <ion-title>Hello, Welcome!</ion-title>
+      <ion-title>Welcome, {{partyName}}</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content class="full-background">
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        <ion-icon md="{{p.icon}}" padding="16px" class="secondary-color-icon"></ion-icon> {{p.title}}
+        <ion-icon name="{{p.icon}}" padding="16px" class="secondary-color-icon"></ion-icon> {{p.title}}
       </button>
     </ion-list>
   </ion-content>
