--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,7 +13,7 @@
   <ion-content class="full-background">
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        <ion-icon name="{{p.icon}}" padding="16px" class="secondary-color-icon"></ion-icon> {{p.title}}
+        <ion-icon name="{{p.icon}}" color="grey" padding="16px"></ion-icon> {{p.title}}
       </button>
     </ion-list>
   </ion-content>
