--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,8 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   full-background : #F1F2F3,
-  accent: #ffeb3b
+  accent: #ffeb3b,
+  grey: #36304a
 );
 
 $toolbar-md-background : color($colors, primary);
