--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -31,3 +31,30 @@ ion-spinner {
   position: fixed;
   z-index: 1;
 }
+
+//table
+table, td, th {    
+  text-align: left;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+th, td {
+  padding: 5px;
+}
+tr:nth-child(even){background-color: #f2f2f2}
+
+table thead tr {
+  height: 50px;
+  background: #36304a;
+  color: white;
+}
+
+tbody tr {
+  font-size: 15px;
+  color: #808080;
+  line-height: 1.2;
+  font-weight: unset;
+}
+//
