--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -71,3 +71,15 @@ tbody tr {
 }
 
 //
+
+.recieved {
+  color: green
+}
+
+.in-progress {
+  color: color($colors, primary)
+}
+
+.cancel {
+  color: red
+}
