--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,12 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #FD367E,
+  primary:    #225f93,
+  secondary:  #229bd0,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  full-background : #F1F2F3,
+  full-background : #FFF,
   accent: #ffeb3b,
   grey: #36304a
 );
