--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -9,8 +9,9 @@
   background-color: #fff;
 }
 
-ion-card{
-  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12) !important;
+ion-card.card{
+  box-shadow: none;
+  border-bottom: 1px solid #ccc;
 }
 
 ion-spinner {
@@ -91,8 +92,25 @@ ion-navbar.toolbar {
     background: #225F93;
   }
 }
-
-
+ion-avatar {
+  text-align: center;
+  img {
+    width: 50px;
+    display: inline-block;
+    margin-bottom: 15px;
+  }
+}
+ion-title {
+  .toolbar-title {
+    font-size: 14px;
+  }
+  span {
+    font-size: 16px;
+  }
+}
+ion-toolbar.toolbar {
+  padding: 10px 15px;
+}
 //overriding default framework style
 .item.item-block {
   padding: 0;
@@ -109,9 +127,37 @@ ion-navbar.toolbar {
   box-shadow: 0 -1px 0 0 #f53d3d;
 }
 ion-content.content-md[padding] .scroll-content {
-	padding-bottom: 16px !important;
+  padding: 0 15px;
+  padding-bottom: 16px !important;
 }
 
 ion-content.content-md:not([padding]) .scroll-content {
+  padding: 0 15px;
 	padding-bottom: 0 !important;
 }
+.item-md.item-block .item-inner {
+  button.item-button {
+    margin: 0;
+    padding: 0;
+  }
+  padding-right: 0;
+}
+
+//cart icon styling
+ion-badge {
+  padding: 4px 7px;
+}
+.cart-btn {
+  position: relative;
+}
+.cart-badge {
+  position: absolute;
+  top: -8px;
+  right: -6px;
+  background: color($colors, secondary);
+  border-radius: 10px;
+  height: 20px;
+  width: 20px;
+}
+
+
