--- a/src/pages/customer-category-list/customer-category-list.scss
+++ b/src/pages/customer-category-list/customer-category-list.scss
@@ -1,3 +1,8 @@
 page-customer-category-list {
-
+    ion-icon {
+        font-size: 2em;
+    }
+}
+.searchbar .searchbar-input {
+    padding: 6px 10px 6px 50px;
 }
