--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
           <img src="./assets/imgs/avatar.png">
         </ion-avatar>
       </div>
-      <ion-title>Welcome <span>{{partyName}}</span></ion-title>
+      <ion-title>Welcome, <span>{{partyName}}</span></ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="full-background">
