--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -105,7 +105,9 @@ ion-title {
     font-size: 14px;
   }
   span {
-    font-size: 16px;
+    font-size: 18px;
+    display: inline-block;
+    padding-left: 5px;
   }
 }
 ion-toolbar.toolbar {
