--- a/src/pages/popover-home/popover-home.scss
+++ b/src/pages/popover-home/popover-home.scss
@@ -6,6 +6,9 @@ page-popover-home {
             padding-right: 0;
         }
     }
+    ion-icon {
+        margin-right: 10px;
+    }
     ion-list.list {
         margin: 0;
         &:first-child {
