--- a/src/pages/add-category/add-category.scss
+++ b/src/pages/add-category/add-category.scss
@@ -1,3 +1,13 @@
 page-add-category {
-
+    form {
+        ion-item.item.item-block {
+            margin-bottom: 20px;
+        }
+    }
+    ion-grid {
+        margin-top: 30px;
+    }
+    ion-list.list {
+        margin: 0 !important;
+    }
 }
