--- a/src/pages/add-product/add-product.scss
+++ b/src/pages/add-product/add-product.scss
@@ -1,3 +1,8 @@
 page-add-product {
-
+    ion-grid > button {
+        margin-top: 30px;
+    }
+    ion-item.item.item-block {
+        margin-bottom: 20px;
+    }
 }
