--- a/src/pages/customer-category-list/customer-category-list.scss
+++ b/src/pages/customer-category-list/customer-category-list.scss
@@ -6,3 +6,18 @@ page-customer-category-list {
 .searchbar .searchbar-input {
     padding: 6px 10px 6px 50px;
 }
+
+ion-item {
+    img {
+        border-radius: 50%;
+        overflow: hidden;
+        width: 40px;
+        height: 40px;
+        margin-right: 20px;
+    }
+}
+
+ion-label {
+    display: flex;
+    align-items: center;
+}
