--- a/src/pages/customer-review-submit-order/customer-review-submit-order.scss
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.scss
@@ -1,2 +1,14 @@
 page-customer-review-submit-order {
+    ion-footer {
+        button:first-child {
+            margin-right: 20px;
+        }
+    }
+    ion-card.card:last-child {
+        border-bottom: none;
+    }
+    [col-10] {
+        display: flex;
+        align-items: center;
+    }
 }
