--- a/src/pages/popover-home/popover-home.scss
+++ b/src/pages/popover-home/popover-home.scss
@@ -1,9 +1,16 @@
-page-popover-home {
+page-popover-home,
+ion-popover {
     padding: 20px 0;
     .item.item-block{
-        padding: 0 20px;
-        .item-inner {
-            padding-right: 0;
+        padding: 0 16px;
+        .item-inner {    
+            padding: 5px 0;
+        }
+        &:first-child {
+            border-top: none;
+        }
+        &:last-child {
+            border-bottom: none;
         }
     }
     ion-icon {
@@ -11,11 +18,8 @@ page-popover-home {
     }
     ion-list.list {
         margin: 0;
-        &:first-child {
-            padding-top: 15px;
-        }
-        &:last-child {
-            padding-bottom: 15px;
+        .item-inner {
+            border-bottom: 1px solid #ccc !important;
         }
     }
 }
