--- a/src/pages/reset-user-password/reset-user-password.scss
+++ b/src/pages/reset-user-password/reset-user-password.scss
@@ -1,3 +1,10 @@
 page-reset-user-password {
-
+    ion-item.item.item-block {
+        margin-bottom: 20px;
+    }
+    form {
+        ion-grid:last-child{
+            margin-top: 30px;
+        }
+    }
 }
