--- a/src/pages/admin-list-user/admin-list-user.scss
+++ b/src/pages/admin-list-user/admin-list-user.scss
@@ -1,3 +1,33 @@
 page-admin-list-user {
-
+    button img {
+        width: 20px ;
+        margin: 0 ;
+    }
+    ion-label > span {
+        text-transform: lowercase;
+    }
+    ion-label > span {
+        &:first-child {
+            height: 50px;
+            width: 50px;
+            background: color($colors, secondary);
+            color: #fff;
+            border-radius: 25px;
+            text-align: center;
+            padding-top: 15px;
+            margin-right: 10px;
+        }
+        &:last-child::first-letter {
+            font-size: 28px;
+            text-transform: uppercase;
+        }
+    }
+    ion-label.label {
+        margin: 16px 8px 16px 0;
+        img {
+            width: 40px;
+            margin-right: 20px;
+            overflow: visible ;
+        }
+    } 
 }
