--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -98,6 +98,11 @@ ion-navbar.toolbar {
   }
 }
 
+//ios header
+.toolbar-content .toolbar-title {
+  color: #fff;
+}
+//header
 ion-toolbar.toolbar {
   padding: 10px 15px;
   ion-title {
@@ -131,9 +136,22 @@ ion-toolbar.toolbar {
   box-shadow: 0 -1px 0 0 #225F93;
   border-bottom-color: #225F93;
 }
+
 .item.item-input.ng-invalid.ng-touched:not(.input-has-focus):not(.item-input-has-focus) .item-inner{
   box-shadow: 0 -1px 0 0 #f53d3d;
 }
+
+.list-ios > .item-block:first-child,
+.list-ios > .item-block:last-child,
+.header-ios .toolbar-ios:last-child .toolbar-background-ios {
+  border: none;
+}
+
+button.item-ios:not([detail-none]) .item-inner {
+  background: none;
+  padding: 0;
+}
+
 ion-content.content[padding] .scroll-content {
   padding: 0 15px;
   padding-bottom: 16px !important;
@@ -143,6 +161,7 @@ ion-content.content:not([padding]) .scroll-content {
   padding: 0 15px;
 	padding-bottom: 0 !important;
 }
+
 .item.item-block .item-inner {
   button.item-button {
     margin: 0;
@@ -153,19 +172,20 @@ ion-content.content:not([padding]) .scroll-content {
 
 //cart icon styling
 ion-badge {
-  padding: 4px 7px;
+  padding: 4px 6px;
 }
 .cart-btn {
   position: relative;
 }
 .cart-badge {
   position: absolute;
-  top: -8px;
+  top: -4px;
   right: -6px;
   background: color($colors, secondary);
   border-radius: 10px;
-  height: 20px;
-  width: 20px;
+  height: 18px;
+  width: 18px;
+  font-size: 10px;
 }
 
 button.bar-button {
