--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
     <ion-toolbar>
       <div>
         <ion-avatar>
-          <img src="./assets/imgs/avatar.png">
+          <img src="assets/imgs/avatar.png">
         </ion-avatar>
       </div>
       <ion-title>Welcome <span>{{partyName}}</span></ion-title>
@@ -13,7 +13,7 @@
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <!-- <ion-icon name="{{p.icon}}" color="grey" padding="16px"></ion-icon>  -->
-        <img src="../assets/icon/{{p.icon}}.svg" alt="{{p.icon}}"/>
+        <img src="assets/icon/{{p.icon}}.svg" alt="{{p.icon}}"/>
         <span>{{p.title}}</span>
       </button>
     </ion-list>
