fix scroll issue

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -12,6 +12,9 @@
 ion-card.card{
   box-shadow: none;
   border-bottom: 1px solid #ccc;
+  &:last-child {
+    border-bottom: none;
+  }
 }
 
 ion-spinner {
