--- a/src/pages/gift-rewards/gift-rewards.scss
+++ b/src/pages/gift-rewards/gift-rewards.scss
@@ -17,7 +17,7 @@ page-gift-rewards {
         z-index: 100;
         background: transparent;
      }
-     
+
      .nextBtn {
         position: absolute;
         right: 10px;
@@ -33,4 +33,7 @@ page-gift-rewards {
      .swiper-slide img {
          max-width: 80%;
      }
+  [text-center] {
+    display: block;
+  }
 }
