--- a/src/pages/gift-rewards/gift-rewards.scss
+++ b/src/pages/gift-rewards/gift-rewards.scss
@@ -2,9 +2,16 @@ page-gift-rewards {
     ion-content.content:not([padding]) .scroll-content {
         padding: 0;
     }
+    .gift-img {
+      padding-top: 30px!important;
+    }
     ion-card.card {
         margin: 0;
         width: 100%;
+    }
+    .gift-image {
+      height: 100px;
+      width: 100px;
     }
     ion-card-content.card-content {
         padding: 15px 0;
