[Update] gift products images

--- a/src/pages/gift-rewards/gift-rewards.scss
+++ b/src/pages/gift-rewards/gift-rewards.scss
@@ -9,6 +9,11 @@ page-gift-rewards {
         margin: 0;
         width: 100%;
     }
+    .special-gift-prod {
+      width: 40px;
+      height: 25px;
+      text-align: center;
+    }
     .gift-image {
       height: 40vw;
       width: 40vw;
