Added Target vs Achievment (Bar) Graph

--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -11,4 +11,8 @@ page-user-profile {
     .profile-header{
         border-bottom: 2px solid #e6e6e6;
     }
+
+    // .profile-expand{
+       
+    // }
 }
