--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -15,4 +15,73 @@ page-user-profile {
     // .profile-expand{
        
     // }
+
+    /* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #fff;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .accordion:hover {
+    background-color: #d2eaff;
+  }
+  
+  /* Style the accordion panel. Note: hidden by default */
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+
+    ion-list{
+        ion-grid{
+            padding-top: 30px !important;
+            padding-bottom: 30px !important;
+            ion-row{
+                ion-col{
+                    border: 1px solid rgb(94, 156, 211);
+                }        
+            }
+            
+            .header, .footer{
+                background: #225F93;
+                color: #fff;
+                font-size: 12px;
+                font-weight: bold;
+            }
+            .table-content{
+                font-size: 12px;
+            }
+    
+            .footnote{
+                margin-top: 10px;
+                color: rgb(92, 92, 92);
+                ion-col{
+                    border: none !important;
+                }
+            }
+
+        }
+    }
+
+  }
+  
+  .panel.active {
+    padding: 0 18px;
+    background-color: white;
+    display: block;
+    overflow: visible;
+  }
+
+  .expand-icon{
+    float: right;
+  }
 }
