Updated UI for Associated Salesman

--- a/src/pages/add-salesman-modal/add-salesman-modal.scss
+++ b/src/pages/add-salesman-modal/add-salesman-modal.scss
@@ -1,3 +1,11 @@
 page-add-salesman-modal {
-
+    .salesman-name{
+        text-transform: capitalize;
+    }
+    .button{
+        box-shadow: none;
+        ion-button{
+            padding-right: 10px;
+        }
+    }
 }
