--- a/src/pages/edit-user/edit-user.scss
+++ b/src/pages/edit-user/edit-user.scss
@@ -1,3 +1,38 @@
 page-edit-user {
+    ion-row{
+        box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
+        margin-top: 15px;
+    }
+    .custom-title{
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
+    .pill-wrapper{
+        //background-color: #c9e1ff;
+        // border: 1px solid rgb(0, 68, 194);
+        box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+        border-radius: 30px;
+        font-size: 16px;
+        margin-top: 10px;
+        margin-right: 15px;
+        float: left;
 
+        .pill-content{
+            padding: 10px;
+            text-transform: capitalize;
+        }
+
+        .pill-remove{
+            background-color: transparent;
+            padding: 6px;
+
+            .pill-close-icon{
+                color: rgb(255, 61, 61);
+            }
+        }
+    }
+    .update-btn{
+        margin-top: 20px;
+        border-radius: 20px;
+    }
 }
