--- a/src/pages/add-salesman-modal/add-salesman-modal.scss
+++ b/src/pages/add-salesman-modal/add-salesman-modal.scss
@@ -4,6 +4,8 @@ page-add-salesman-modal {
     }
     .button{
         box-shadow: none;
+        float: right;
+        font-size: 25px;
         ion-button{
             padding-right: 10px;
         }
