--- a/src/pages/edit-user/edit-user.scss
+++ b/src/pages/edit-user/edit-user.scss
@@ -35,4 +35,8 @@ page-edit-user {
         margin-top: 20px;
         border-radius: 20px;
     }
+
+    .associated-salesman{
+        box-shadow: none;
+    }
 }
