--- a/src/pages/edit-user/edit-user.scss
+++ b/src/pages/edit-user/edit-user.scss
@@ -1,6 +1,6 @@
 page-edit-user {
     ion-row{
-        box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
+        // box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
         margin-top: 15px;
     }
     .custom-title{
