Updated: Added Payment Button & Modal

--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -85,4 +85,10 @@ page-user-profile {
   .expand-icon{
     float: right;
   }
+
+  .paymentBtn{
+      position: fixed;
+      bottom: 5%;
+      right: 5%;
+  }
 }
