--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -4,6 +4,10 @@ page-user-profile {
         margin-bottom: 5px;
         border-radius: 5px;
         box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+
+        button{
+            font-size: 1.2em;
+        }
     }
     // .profile-item{
     //     border-bottom: 1px solid #e6e6e6;
