--- a/src/pages/add-salesman-modal/add-salesman-modal.scss
+++ b/src/pages/add-salesman-modal/add-salesman-modal.scss
@@ -1,27 +1,33 @@
 page-add-salesman-modal {
-    .salesman-name{
-        text-transform: capitalize;
-        font-size: 1.2em;
+    button img {
+        width: 20px ;
+        margin: 0 ;
     }
-    .button{
-        box-shadow: none;
-        float: right;
-        font-size: 25px;
-        margin-right: -20px;
-        ion-button{
-            .button-md{
-                padding: 0.4em !important;
-            }
-            ion-icon{
-                margin-right: -5px;
-            }
+    ion-label > span {
+        text-transform: lowercase;
+    }
+    ion-label > span {
+        &:first-child {
+            height: 50px;
+            width: 50px;
+            background: color($colors, secondary);
+            color: #fff;
+            border-radius: 25px;
+            text-align: center;
+            padding-top: 15px;
+            margin-right: 10px;
+        }
+        &:last-child::first-letter {
+            font-size: 28px;
+            text-transform: uppercase;
         }
     }
-        .toolbar{
-            padding: 5px 15px 5px 15px;
-            .toolbar-content {
-                border-bottom: none !important;
-                padding-bottom: 0 !important;
-            }
+    ion-label.label {
+        margin: 16px 8px 16px 0;
+        img {
+            width: 40px;
+            margin-right: 20px;
+            overflow: visible ;
         }
+    }
 }
