--- a/src/pages/salesman-dashboard/salesman-dashboard.scss
+++ b/src/pages/salesman-dashboard/salesman-dashboard.scss
@@ -9,8 +9,8 @@ page-salesman-dashboard {
         }
       .salesmanDashboardBtn{
           background-color: #3d9ef0;
-          border-radius: 3px;
-          margin-top: 16px;
+          // border-radius: 3px;
+          // margin-top: 16px;
           font-size: 1em;
       }
 
