Fixed Issues: Chart, Password Eye, UI

--- a/src/pages/customer-review-submit-order/customer-review-submit-order.scss
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.scss
@@ -58,4 +58,14 @@ page-customer-review-submit-order {
     .collapsed {
         height: 0;
     }
+
+    .item-visible{
+        display: inline-block;
+        text-transform: capitalize;
+        color: #6b6b6b;
+      }
+    
+      .item-hidden{
+          display: none;
+      }
 }
