--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -30,6 +30,14 @@ page-login {
       color: #bebebe;
     }
   }
+
+  .item-active{
+    color: #181818;
+  }
+
+  .item-inactive{
+    color: #bebebe;
+  }
 }
 .error {
   text-align: left;
