Fixed Labels & Empty Lists

--- a/src/pages/admin-list-user/admin-list-user.scss
+++ b/src/pages/admin-list-user/admin-list-user.scss
@@ -29,5 +29,18 @@ page-admin-list-user {
             margin-right: 20px;
             overflow: visible ;
         }
-    } 
+    }
+    .noDataView{
+        border-bottom: none;
+        ion-card-header{
+            padding: 20px;
+            margin-top: 30%;
+            font-size: 60px;
+            color: #225f93;
+
+            h4{
+                font-size: 2rem
+            }
+        }
+    }
 }
