--- a/src/pages/customer-list-order/customer-list-order.scss
+++ b/src/pages/customer-list-order/customer-list-order.scss
@@ -1,3 +1,12 @@
 page-customer-list-order {
-    
+    .noDataView{
+        padding: 20px;
+        margin-top: 30%;
+        font-size: 60px;
+        color: #225f93;
+
+        h4{
+            font-size: 2rem
+        }
+    }
 }
