Updated Add Payment

--- a/src/pages/add-payment-modal/add-payment-modal.scss
+++ b/src/pages/add-payment-modal/add-payment-modal.scss
@@ -28,4 +28,8 @@ page-add-payment-modal {
     .item-hidden{
         display: none;
     }
+
+    .salesmanLabel{
+        margin-top: 16px;
+    }
 }
