--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -198,4 +198,11 @@ page-user-profile {
     box-shadow: 0 0px 10px rgba(34, 95, 147, 0.5);
     background: #225f93;
   }
+
+  // .toolbar-background {
+  //   background-color: rgb(0, 140, 255) !important; 
+  // }
+  // .toggleColor{
+  //   background-color: rgb(0, 140, 255) !important;
+  // }
 }
