Salesman Dashboard > View Customer's Orders

--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -97,12 +97,12 @@ page-user-profile {
             border-bottom: none !important;
         }
     }
-  // .salesmanDashboardBtn{
-  //     background-color: #3d9ef0;
-  //     border-radius: 3px;
-  //     margin-top: 16px;
-  //     font-size: 1em;
-  // }
+  .salesmanDashboardBtn{
+      background-color: #3d9ef0;
+      border-radius: 3px;
+      margin-top: 16px;
+      font-size: 1em;
+  }
   .customerdashboardBtn{
     background-color: #225F93;
     border-radius: 0;
