--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -1,26 +1,4 @@
 page-user-profile {
-    // .profile-card{
-    //     margin-top: 20px;
-    //     margin-bottom: 5px;
-    //     border-radius: 5px;
-    //     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
-
-    //     button{
-    //         font-size: 1.2em;
-    //     }
-    // }
-    // .profile-item{
-    //     border-bottom: 1px solid #e6e6e6;
-    // }
-
-    // .profile-header{
-    //     border-bottom: 2px solid #e6e6e6;
-    // }
-
-    // .profile-expand{
-       
-    // }
-
     /* Style the buttons that are used to open and close the accordion panel */
 // .accordion {
 //     background-color: #fff;
@@ -196,7 +174,7 @@ page-user-profile {
   }
   ion-footer{
     box-shadow: 0 0px 10px rgba(34, 95, 147, 0.5);
-    background: #225f93;
+    // background: #225f93;
   }
 
   // .toolbar-background {
@@ -205,4 +183,45 @@ page-user-profile {
   // .toggleColor{
   //   background-color: rgb(0, 140, 255) !important;
   // }
+
+  .customerColor{
+    background: #225f93;
+    
+    .toolbar-background{
+      background-color: #225F93;
+    }
+
+    .salesmanDashboardBtn{
+      background-color: #3d9ef0;
+      border-radius: 3px;
+      margin-top: 16px;
+      font-size: 1em;
+  }
+  .customerdashboardBtn{
+    background-color: #225F93;
+    border-radius: 0;
+    // margin-top: 16px;
+    font-size: 1em;
+    // width: calc(50% - 8px);
+    width: 47%;
+    box-shadow: none;
+  }
+
+  }
+
+  .salesmanColor{
+    background: #229BD0;
+    .toolbar-background{
+      background-color: #229BD0;
+    }
+    .customerdashboardBtn{
+      background-color: #229BD0;
+      border-radius: 0;
+      // margin-top: 16px;
+      font-size: 1em;
+      // width: calc(50% - 8px);
+      width: 47%;
+      box-shadow: none;
+    }
+  }
 }
